test/test_cases/invalid/syntaxErr/variables/reservedWords5.ast
-- Test: reservedWords5.wacc

-- Uploaded file: 
---------------------------------------------------------------
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  bool ord = true
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:7 -- no viable alternative at input 'boolord'
1 parser error(s) detected, no further compilation attempted.

